# Ardulingua

./: CMakeLists.txt  README.md  library.properties
devel/etl_integer_sequence_test/: etl_integer_sequence_test.ino
devel/etl_test/: etl_test.ino
devel/namespace_test/: namespace_test.ino
mmsrc/: DeviceError.h  DeviceProp.h  DevicePropHelpers.h  LocalProp.h  PropInfo.h  RemoteProp.h  StreamAdapter.h
src/: Ardulingua.h  CMakeLists.txt  Delegate.h  DeviceError.h  DeviceProp.h  JsonDelegate.h  JsonDispatch.h  Logger.h  PropInfo.h  ServerProperty.h  SlipInPlace.h  StreamAdapter.h  common_rdl.h
src/Polyfills/: arduino_string_utils.h  std_type_traits.h  std_utility.h  sys_timing.h  sys_unordered_map.h
src/Polyfills/arduino/: ard_Print.h  ard_Print_std.h  ard_Printable.h  ard_Stream.h  ard_Stream_std.h  ard_String.h  ard_StringHelp.h
src/rdl/: Array.h  Arraybuf.h  Buffer.h  Common.h  Delegate.h  JsonClient.h  JsonDelegate.h  JsonDispatch.h  JsonError.h  JsonProtocol.h  JsonServer.h  Logger.h  ServerProperty.h  SlipInPlace.h  StringT.h  std_type_traits.h  std_utility.h  sys_PrintT.h  sys_StreamT.h  sys_StringT.h  sys_timing.h
src/rdl/Polyfills/: Print_Mock.h  Print_MockHelp.h  Print_MockIOS.h  Printable_Mock.h  Stream_Mock.h  Stream_MockIOS.h  ard_PrintMock.h  ard_PrintMockHelp.h  ard_PrintableMock.h  ard_StreamMock.h  std_utility.h  sys_timing.h
src/rdlmm/: DeviceError.h  DeviceLog.h  DeviceProp.h  DevicePropHelpers.h  LocalProp.h  PropInfo.h  RemoteProp.h  StreamAdapter.h  Stream_HubSerial.h
tests/: CMakeLists.txt  devel1_main.cpp  test_server.cpp
tests/dispatch/: main.cpp  test_delegate.cpp
tests/slip/: hrslip.h  main.cpp  test_decode.cpp  test_decode_null.cpp  test_decode_slip.cpp  test_encode.cpp  test_encode_null.cpp  test_encode_slip.cpp  test_sliputils.cpp
